Fri Jun 22 07:26:09 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * dds/DCPS/GroupRakeData.cpp:
          Use this-> to make clear it is a member we are using

        * dds/DCPS/InstanceState.h:
        * dds/DCPS/SubscriberImpl.h:
        * dds/DCPS/WriteDataContainer.h:
          Doxygen fixes

        * dds/DCPS/InstanceState.inl:
          Use prefix increment, improves performance

        * dds/DCPS/SubscriptionInstance.h:
          No need to check a pointer for 0 before calling delete on it

Thu Jun 21 19:01:10 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * dds/DCPS/BitPubListenerImpl.cpp:
          Added missing return, const changes, make exclude scoped block larger

        * dds/DCPS/DomainParticipantImpl.cpp:
          Initialize pointer to 0 and use _nil for object ptr

        * dds/DCPS/Serializer.h:
          Doxygen fixes

Thu Jun 21 17:57:25 UTC 2012  Trevor Fields  <fields_t@ociweb.com>

        * dds/DCPS/DataWriterImpl.cpp:
        * tests/DCPS/Rejects/publisher.cpp:

          Whitespace changes to fix fuzz warnings.

Thu Jun 21 17:30:26 UTC 2012  Byron Harris  <harrisb@ociweb.com>

        * tests/DCPS/DomainParticipantId:
        * tests/DCPS/RegisterInstance:
        * tests/DCPS/Rejects:
        * tests/DCPS/TopicReuse:

          Have subversion ignore generated files.

Thu Jun 21 17:23:47 UTC 2012  Byron Harris  <harrisb@ociweb.com>

        * tests/DCPS/DCPSInfoRepo/pubsub.cpp:
        * tests/DCPS/unit/Main.cpp:

          Explicitly include PortableServer.h which was
          being implicitly included from Service_Participant.h
          before include of PortableServer.h was removed
          from it.
Thu Jun 21 15:46:25 UTC 2012  Byron Harris  <harrisb@ociweb.com>

        * dds/DCPS/WriteDataContainer.cpp:

          Avoid compiler warnings about ctor initialization order.

Thu Jun 21 15:17:21 UTC 2012  Byron Harris  <harrisb@ociweb.com>

        * dds/DCPS/Service_Participant.h:
