@@ -1,3 +1,11 @@
+Fri Jun 22 07:49:53 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * dds/DCPS/DCPS_Utils.h:
+          Doxygen improvements
+
+        * dds/DCPS/DataWriterImpl.cpp:
+          Initialise pointer with 0, const improvements
+
 Fri Jun 22 07:26:09 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * dds/DCPS/GroupRakeData.cpp:
